styles/globals.css
/* ... */
.proposal-axis3 {
  top: 203px;
  z-index: 3;
}
.proposal-axis4 {
  top: 253px;
  z-index: 4;
}
.proposal-axis5 {
  top: 303px;
  z-index: 5;
}
.proposal-axis6{
  top: 353px;
  z-index: 6;
}
.proposal-axis7 {
  top: 403px;
  z-index: 7;
}
.proposal1-button,
.proposal2-button,
.proposal3-button,
.proposal4-button,
.proposal5-button,
.proposal6-button,
.proposal7-button,
.proposal8-button {
  position: absolute;
  margin: 0 !important;
  top: 17px;
  left: 18px;
  border-radius: 50%;
  background-color: #71BD36;
  width: 22px;
  height: 22px;
  z-index: 0;
}
.proposal2-button,
.proposal3-button,
.proposal4-button,
.proposal5-button,
.proposal6-button,
.proposal7-button,
.proposal8-button {
  top: 67px;
}
.proposal3-button,
.proposal4-button,
.proposal5-button,
.proposal6-button,
.proposal7-button,
.proposal8-button {
  top: 117px;
}
.proposal4-button,
.proposal5-button,
.proposal6-button,
.proposal7-button,
.proposal8-button {
  top: 167px;
}
.proposal5-button,
.proposal6-button,
.proposal7-button,
.proposal8-button {
  top: 217px;
}
.proposal6-button,
.proposal7-button,
.proposal8-button {
  top: 267px;
}
.proposal7-button,
.proposal8-button {
  top: 317px;
}
.proposal8-button {
  top: 367px;
}
.vote-options {
  display: flex;
  flex-direction: row;
  gap: 4%;
  position: relative;
  justify-content: center;
  flex-wrap: wrap;
}
.vote-buttons {
  background-color: gray;
  border-radius: 0.2rem;
  width: 82px;
  height: 22px;
}
.vote-total {
  position: relative;
  margin-top: 2%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  font-size: 130%;
  color: #798EFF;
}
.proposal-1,
.proposal-2,
.proposal-3,
.proposal-4,
.proposal-5,
.proposal-6,
.proposal-7,
.proposal-8 {
  color: white;
  cursor: pointer;
}

.proposal-1,
.proposal-2,
.proposal-3,
.proposal-4 {
  position: absolute;
  margin: 0 !important;
  top: 17px;
  left: 70px;
  z-index: 16;
}
.proposal-2 {
  top: 67px;
  z-index: 17;
}
.proposal-3 {
  top: 117px;
  z-index: 18;
}
.proposal-4 {
  top: 167px;
  z-index: 19;
}
.proposal-5,
.proposal-6,
.proposal-7,
.proposal-8 {
  position: absolute;
  margin: 0 !important;
  top: 217px;
  left: 70px;
  z-index: 20;
}
.proposal-6{
  top: 267px;
}
.proposal-7 {
  top: 317px;
}
.proposal-8 {
  top: 367px;
}
.submit-proposal {
  position: absolute;
  cursor: pointer;
  top: 9.38%;
  left: 18%;
}
.submit-proposal-button {
  position: relative;
  cursor: pointer;
  top: 84%;
  left: 31%;
  width: 154px;
  height: 32px;
  background-color: #D9D9D9;
}
.proposal-days {
  position: absolute;
  margin: 0 !important;
  top: 17px;
  left: 278px;
  z-index: 25;
  color: white;
}
.proposal-days1,
.proposal-days2,
.proposal-days3 {
  position: absolute;
  margin: 0 !important;
  top: 67px;
  left: 218px;
  z-index: 26;
  color: white;
}
.proposal-days2,
.proposal-days3 {
  top: 117px;
  z-index: 27;
}
.proposal-days3 {
  top: 167px;
  z-index: 28;
}
.proposal-days4,
.proposal-days5,
.proposal-days6 {
  position: absolute;
  margin: 0 !important;
  top: 217px;
  left: 218px;
  z-index: 29;
  color: white;
}
.proposal-days5,
.proposal-days6 {
  top: 267px;
  z-index: 30;
}
.proposal-days6 {
  top: 317px;
  z-index: 31;
}
.proposal-days7,
.proposal-result,
.proposal-result1 {
  position: absolute;
  margin: 0 !important;
  top: 367px;
  left: 218px;
  z-index: 32;
  color: white;
}
.proposal-result,
.proposal-result1 {
  top: 17px;
  left: 340px;
  z-index: 33;
}
.proposal-result1 {
  top: 67px;
  z-index: 34;
}
.proposal-result2,
.proposal-result3,
.proposal-result4 {
  position: absolute;
  margin: 0 !important;
  top: 117px;
  left: 340px;
  z-index: 35;
  color: white;
}
.proposal-result3,
.proposal-result4 {
  top: 167px;
  z-index: 36;
}
.proposal-result4 {
  top: 217px;
  z-index: 37;
}
.proposal-result5,
.proposal-result6,
.proposal-result7 {
  position: absolute;
  margin: 0 !important;
  top: 267px;
  left: 340px;
  z-index: 38;
  color: white;
}
.proposal-result6,
.proposal-result7 {
  top: 317px;
  z-index: 39;
}
.proposal-result7 {
  top: 367px;
  z-index: 40;
}
.proposals-delegations{  
  position: absolute;
  display: flex;
  left: 0%;
  top: 41.7%;
  width: 100%;
  height: 499px;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2%;
}
.proposals-frame {
  position: relative;
  margin-top: 10%;
  /* left: 10%; */
  background-color: #2F2F2F;
  border: gray 2.5px solid;
  width: 402px;
  height: 499px;
}
.delegation-frame {
  position: relative;
  display: flex;
  /* left: 17%; */
  top: 33%;
  width: 323px;
  height: 500px;
}
@media screen and (max-width: 725px) {  
  .proposals-delegations{  
    gap: 0%;
  }
}
.delegate-xaxis-frame {  
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0%;
  width: 100%;
  height: 100%;
  margin-top: 12%;
  gap: 12%;
}
.delegate-yaxis-frame {  
  display: flex;
  flex-direction: row;
  position: absolute;
  top: 0%;
  width: 100%;
  height: 100%;
  margin-left: 37%;
  gap: 23%;
}
.undelegate-button-frame {  
  display: flex;
  flex-direction: column;
  position: absolute;
  flex-wrap: wrap;
  align-content: center;
  top: 0%;
  right: 0%;
  width: 14%;
  height: 100%;
  margin-top: 3%;
  gap: 5.5%;
  align-items: flex-end;
}
.delegate-button-frame {  
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0%;
  right: 16.5%;
  width: 30%;
  height: 100%;
  margin-top: 1%;
  gap: 2.4%;
  align-items: flex-end;
}
.delegate-frame {  
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 2.5%;
  width: 37%;
  height: 100%;
  gap: 5%;
}
.fluidity-frame {  
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 2.5%;
  width: 100%;
  height: 100%;
  margin-left: 49%;
  gap: 5%;
}
.voting-power-frame {  
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 2.5%;
  width: 13.8%;
  height: 100%;
  margin-left: 37.3%;
  gap: 5%;
}
/* ... */

